# check_journal

./: .gitignore  Cargo.toml  ChangeLog  LICENSE  Makefile  README.md  check_journal.1.ronn  default.nix  flake.nix  icinga2_check_journal.conf
.github/workflows/: build.yml  cargo-test.yml
fixtures/: journal.txt  journalctl-cursor-file.sh  journalctl-error.sh  rules.yaml
man/: check_journal.1.ronn
snap/: snapcraft.yaml
src/: check.rs  main.rs  rules.rs  statefile.rs  tests.rs  timeout.rs  utils.rs
tests/: versions.rs
