[package]
name = "check_journal"
version = "1.1.0"
authors = ["Christian Kauhaus <kc@flyingcircus.io>"]
description = "Nagios/Icinga compatible plugin to search `journalctl` output for matching lines"
readme = "README.md"
repository = "https://github.com/flyingcircusio/check_journal"
keywords = ["monitoring", "journal"]
license = "BSD-3-Clause"
edition = "2018"

[dependencies]
anyhow = "1.0"
regex = "1.3"
serde = { version = "1.0.110", features = ["derive"] }
serde_yaml = "0.8"
structopt = "0.3.14"
subprocess = "0.2.4"
ureq = { version = "1.1.1", features = ["charset"] }

[profile.release]
lto = "thin"
