[package]
name = "check_journal"
version = "1.1.3-dev"
authors = ["Christian Kauhaus <kc@flyingcircus.io>"]
description = "Nagios/Icinga compatible plugin to search `journalctl` output for matching lines"
edition = "2018"
keywords = ["monitoring", "journal", "nagios", "icinga"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/flyingcircusio/check_journal"

[dependencies]
anyhow = "1.0"
clap = { version = "2", features = ["wrap_help"] }
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
structopt = "0.3"
subprocess = "0.2.4"
ureq = { version = "1.4", features = ["charset"] }

[profile.release]
lto = "thin"
